@@ -48,6 +48,19 @@
           </div>
         </div>
 
+        <div class="document-inner-info-container edge-edit-container">
+          <div id="edit-from" class="document-attribute">
+            <i class="fa fa-edit"></i>
+            <i class="fa fa-check" style="display: none"></i>
+            <i class="fa fa-times" style="display: none"></i>
+          </div>
+          <div id="edit-to" class="document-attribute">
+            <i class="fa fa-edit"></i>
+            <i class="fa fa-check" style="display: none"></i>
+            <i class="fa fa-times" style="display: none"></i>
+          </div>
+        </div>
+
       </div>
 
     </div>
